--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # Flask Settings
 FLASK_ENV=development
 FLASK_APP=app.py
+
+# Widget / multi-tenant settings
+WIDGET_JWT_SECRET=please_change_me
+# Optional: override tenant config location (defaults to ./data/tenants.json)
+# TENANT_CONFIG_PATH=/app/data/tenants.json
+# Optional: override session TTL (seconds)
+# WIDGET_SESSION_TTL_SECONDS=21600
