feat: enhance multi-tenant support with admin API key and model configuration
- Added ADMIN_API_KEY support for protecting management endpoints.
- Updated .env.example and README.md to include new environment variables.
- Refactored widget.js and iframe-embed.html for consistent naming.
- Improved security by validating host claims in the public_init endpoint.
- Enhanced error handling in AIAgent for resource exhaustion.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Gemini API Key
 GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_MODEL_NAME=gemini-2.0-flash-lite
 
 # Flask Settings
 FLASK_ENV=development
@@ -7,6 +8,9 @@ FLASK_APP=app.py
 
 # Widget / multi-tenant settings
 WIDGET_JWT_SECRET=please_change_me
+# Optional: Admin API key for protecting management endpoints (/api/add_knowledge, /api/upload_file, /api/fetch_url)
+# If set, these endpoints will require X-Admin-API-Key header. Strongly recommended for production.
+# ADMIN_API_KEY=your_admin_api_key_here
 # Optional: override tenant config location (defaults to ./data/tenants.json)
 # TENANT_CONFIG_PATH=/app/data/tenants.json
 # Optional: override session TTL (seconds)
