--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,11 @@ WIDGET_JWT_SECRET=please_change_me
 # TENANT_CONFIG_PATH=/app/data/tenants.json
 # Optional: override session TTL (seconds)
 # WIDGET_SESSION_TTL_SECONDS=21600
+
+# Qdrant connection settings
+# Option 1: managed endpoint
+# QDRANT_URL=https://your-qdrant-endpoint:6333
+# QDRANT_API_KEY=your_qdrant_api_key
+# Option 2: self-hosted / docker-compose
+# QDRANT_HOST=vectordb
+# QDRANT_PORT=6333
