feat: enhance Dockerfile and app.py for improved Qdrant payload indexing and model preloading

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -6,6 +6,9 @@ COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Pre-download the sentence-transformer model to avoid timeout on startup
+RUN python -c "from sentence_transformers import SentenceTransformer; SentenceTransformer('all-MiniLM-L6-v2')"
+
 COPY . .
 
 EXPOSE 8000
