feat: update .env.example and README.md to reflect management API settings and remove unnecessary keys

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,8 @@ FLASK_ENV=development
 FLASK_APP=app.py
 
 # Widget / multi-tenant settings
-WIDGET_JWT_SECRET=please_change_me
-# Optional: Admin API key for protecting management endpoints (/api/add_knowledge, /api/upload_file, /api/fetch_url)
-# If set, these endpoints will require X-Admin-API-Key header. Strongly recommended for production.
+# 認証は現在無効化中のため、WIDGET_JWT_SECRET / ADMIN_API_KEY は不要です。
+# WIDGET_JWT_SECRET=please_change_me
 # ADMIN_API_KEY=your_admin_api_key_here
 # Optional: override tenant config location (defaults to ./data/tenants.json)
 # TENANT_CONFIG_PATH=/app/data/tenants.json
@@ -23,3 +22,12 @@ WIDGET_JWT_SECRET=please_change_me
 # Option 2: self-hosted / docker-compose
 # QDRANT_HOST=vectordb
 # QDRANT_PORT=6333
+
+# Management API settings (D1)
+# Pythonが参照する管理APIのベースURL
+# MGMT_API_BASE_URL=http://localhost:8787
+# 管理APIキー（サービス間から直接呼ぶ場合に使用。UIからの操作はセッション認証）
+# MGMT_ADMIN_API_KEY=change-me
+# キャッシュとタイムアウト
+# MGMT_API_CACHE_TTL=30
+# MGMT_API_TIMEOUT_SEC=5
