--- a/terraform/env/prod/terraform.tfvars.example
+++ b/terraform/env/prod/terraform.tfvars.example
@@ -21,3 +21,12 @@ qdrant_url = "https://your-qdrant-endpoint:6333"
 mgmt_api_base_url    = "https://your-management-api.example.com"
 mgmt_api_cache_ttl   = "30"
 mgmt_api_timeout_sec = "5"
+
+# API Keys (sensitive)
+gemini_api_key     = "your-gemini-api-key"
+qdrant_api_key     = "your-qdrant-api-key"
+mgmt_admin_api_key = "your-management-admin-api-key"
+
+# GitHub Actions Workload Identity Federation
+github_repository    = "yuorei/ai-chat-iflame"
+allowed_repositories = ["yuorei/ai-chat-iflame", "yuorei/blog-support"]
