Add feature/page-read branch to Cloud Run deployment triggers

--- a/.github/workflows/cloudrun-deploy.yaml
+++ b/.github/workflows/cloudrun-deploy.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - feature/page-read
     paths:
       - "server/**"
       - ".github/workflows/cloudrun-deploy.yaml"
