Add page_context and only_page_context to chat request body; update Docker compose for frontend

--- a/compose.yaml
+++ b/compose.yaml
@@ -23,7 +23,7 @@ services:
     ports:
       - "3000:80"
     volumes:
-      - ./front:/usr/share/nginx/html
+      - ./front/public:/usr/share/nginx/html
 
   vectordb:
     image: qdrant/qdrant:latest
