--- a/.github/workflows/cloudrun-deploy.yaml
+++ b/.github/workflows/cloudrun-deploy.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - feature/page-read
+      - feature/*
     paths:
       - "server/**"
       - ".github/workflows/cloudrun-deploy.yaml"
