feat: add Firebase dependency, create setup-secrets script, and update Vite config for Cloudflare

--- a/management/management-web/package.json
+++ b/management/management-web/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@react-router/fs-routes": "^7.10.1",
+		"firebase": "^12.7.0",
 		"isbot": "^5.1.31",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
