--- a/management/management-web/package.json
+++ b/management/management-web/package.json
@@ -15,6 +15,7 @@
 		"@react-router/fs-routes": "^7.10.1",
 		"firebase": "^12.7.0",
 		"isbot": "^5.1.31",
+		"lucide-react": "^0.562.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
 		"react-router": "^7.10.0"
