Add TypeScript support and refactor UI-related types
- Added TypeScript as a dev dependency in package.json and package-lock.json.
- Refactored UI-related types into a shared module for better organization and reusability.
- Updated tsconfig files to include shared types and improve type checking.
- Enhanced documentation in ui-defaults.ts for clarity on type usage.

--- a/management/management-server-hono/tsconfig.json
+++ b/management/management-server-hono/tsconfig.json
@@ -11,6 +11,8 @@
       "DOM.Iterable"
     ],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
-  }
+    "jsxImportSource": "hono/jsx",
+    "types": ["./worker-configuration.d.ts"]
+  },
+  "include": ["src/**/*", "../../shared/**/*"]
 }
