--- a/management/management-web/tsconfig.cloudflare.json
+++ b/management/management-web/tsconfig.cloudflare.json
@@ -6,7 +6,8 @@
     "app/**/.server/**/*",
     "app/**/.client/**/*",
     "workers/**/*",
-    "worker-configuration.d.ts"
+    "worker-configuration.d.ts",
+    "../../shared/**/*"
   ],
   "compilerOptions": {
     "composite": true,
