Revert "Add TypeScript support and refactor UI-related types"
This reverts commit 647555a2564627f712afa0aebfa65db6c59239db.

--- a/management/management-server-hono/tsconfig.json
+++ b/management/management-server-hono/tsconfig.json
@@ -11,8 +11,6 @@
       "DOM.Iterable"
     ],
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx",
-    "types": ["./worker-configuration.d.ts"]
-  },
-  "include": ["src/**/*", "../../shared/**/*"]
+    "jsxImportSource": "hono/jsx"
+  }
 }
