--- a/management/management-web/tsconfig.cloudflare.json
+++ b/management/management-web/tsconfig.cloudflare.json
@@ -6,8 +6,7 @@
     "app/**/.server/**/*",
     "app/**/.client/**/*",
     "workers/**/*",
-    "worker-configuration.d.ts",
-    "../../shared/**/*"
+    "worker-configuration.d.ts"
   ],
   "compilerOptions": {
     "composite": true,
