--- a/cfw-iframe-server/package.json
+++ b/cfw-iframe-server/package.json
@@ -7,6 +7,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@sentry/cloudflare": "^8.51.0",
     "hono": "^4.11.1"
   },
   "devDependencies": {
