--- a/management/management-server-hono/package.json
+++ b/management/management-server-hono/package.json
@@ -7,6 +7,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@sentry/cloudflare": "^8.51.0",
     "firebase-auth-cloudflare-workers": "^2.0.6",
     "hono": "^4.11.1"
   },
