--- a/management/management-web/package.json
+++ b/management/management-web/package.json
@@ -18,7 +18,8 @@
 		"lucide-react": "^0.562.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
-		"react-router": "^7.10.0"
+		"react-router": "^7.10.0",
+		"recharts": "^3.6.0"
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^1.13.5",
