--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,7 +1,7 @@
 flask==3.0.0
 flask-cors==4.0.0
 google-cloud-bigquery==3.25.0
-google-generativeai==0.3.0
+google-genai>=1.0.0
 python-dotenv==1.0.0
 requests==2.31.0
 qdrant-client==1.15.1
