--- a/management/management-web/package.json
+++ b/management/management-web/package.json
@@ -18,6 +18,7 @@
 		"lucide-react": "^0.562.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
+		"react-markdown": "^10.1.0",
 		"react-router": "^7.10.0",
 		"recharts": "^3.6.0"
 	},
