--- a/admin/ai-chat-admin/package.json
+++ b/admin/ai-chat-admin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google-cloud/bigquery": "^7.9.1",
     "next": "16.1.3",
+    "next-auth": "^5.0.0-beta.30",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^2.15.3"
